--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,25 @@
+# ===============================
+# Secrets, keys, configs and logs
+# ===============================
+imagoweb/config.yml
+imagoweb/logs/
+todo.md
+
+# =====================================
 # Byte-compiled / optimized / DLL files
+# =====================================
 __pycache__/
 *.py[cod]
 *$py.class
 
+# ============
 # C extensions
+# ============
 *.so
 
+# ========================
 # Distribution / packaging
+# ========================
 .Python
 build/
 develop-eggs/
@@ -27,17 +40,21 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# ===========
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+# ===========
 *.manifest
 *.spec
 
+# ==============
 # Installer logs
+# ==============
 pip-log.txt
 pip-delete-this-directory.txt
 
+# ============================
 # Unit test / coverage reports
+# ============================
 htmlcov/
 .tox/
 .nox/
@@ -51,37 +68,55 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
+# ============
 # Translations
+# ============
 *.mo
 *.pot
 
-# Django stuff:
+# ============
+# Django stuff
+# ============
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+# ===========
+# Flask stuff
+# ===========
 instance/
 .webassets-cache
 
-# Scrapy stuff:
+# ============
+# Scrapy stuff
+# ============
 .scrapy
 
+# ====================
 # Sphinx documentation
+# ====================
 docs/_build/
 
+# =========
 # PyBuilder
+# =========
 target/
 
+# ================
 # Jupyter Notebook
+# ================
 .ipynb_checkpoints
 
+# =======
 # IPython
+# =======
 profile_default/
 ipython_config.py
 
+# =====
 # pyenv
+# =====
 .python-version
 
 # pipenv
@@ -91,17 +126,25 @@ ipython_config.py
 #   install all needed dependencies.
 #Pipfile.lock
 
+# =====================================================
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# =====================================================
 __pypackages__/
 
+# ============
 # Celery stuff
+# ============
 celerybeat-schedule
 celerybeat.pid
 
+# =====================
 # SageMath parsed files
+# =====================
 *.sage.py
 
+# ============
 # Environments
+# ============
 .env
 .venv
 env/
@@ -110,20 +153,30 @@ ENV/
 env.bak/
 venv.bak/
 
+# =======================
 # Spyder project settings
+# =======================
 .spyderproject
 .spyproject
 
+# =====================
 # Rope project settings
+# =====================
 .ropeproject
 
+# ====================
 # mkdocs documentation
+# ====================
 /site
 
+# ====
 # mypy
+# ====
 .mypy_cache/
 .dmypy.json
 dmypy.json
 
+# =================
 # Pyre type checker
+# =================
 .pyre/
