Add my name to sponsorship

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: # Replace with up to 4 GitHub usernames that are enrolled in the Sponsorship programme
+github: Jack-Gledhill # Replace with up to 4 GitHub usernames that are enrolled in the Sponsorship programme
 patreon: milabot
 open_collective: # Replace with a single Open Collective username
 ko_fi: milabot
