--- a/imagoweb/config.example.yml
+++ b/imagoweb/config.example.yml
@@ -1,6 +1,8 @@
 # ================
 # General settings
 # ================
+default_locale: en-US # available locales are listed in /locales; Dutch locale is incomplete
+
 server:
     host: "0.0.0.0"
     port: 5000
