--- a/imagoweb/config.example.yml
+++ b/imagoweb/config.example.yml
@@ -110,6 +110,7 @@ discord:
             [DELETE] Image
             ==============
 
+            < SIZE   = {file[size]}KB
             < TYPE   = {file[type]}/{file[ext]}
             < KEY    = {file[key]}
             
@@ -117,7 +118,7 @@ discord:
             < ACTOR  = User #{actor[id]} ({actor[name]})```
             {file[url]}
 
-    FILE_UPLOAD: |-
+        FILE_UPLOAD: |-
             ```md
             [UPLOAD] Image
             ==============
@@ -129,7 +130,7 @@ discord:
             < ACTOR  = User #{actor[id]} ({actor[name]})```
             {file[url]}
 
-    URL_SHORTEN: |-
+        URL_SHORTEN: |-
             ```md
             [SHORTEN] URL
             =============
@@ -140,7 +141,7 @@ discord:
             < ACTOR  = User #{actor[id]} ({actor[name]})```
             {url[url]}
 
-    URL_DELETE: |-
+        URL_DELETE: |-
             ```md
             [DELETE] URL
             ============
@@ -151,7 +152,7 @@ discord:
             < AUTHOR = User #{url[author][id]} ({url[author][name]})
             < ACTOR  = User #{actor[id]} ({actor[name]})```
 
-    USER_EDIT: |-
+        USER_EDIT: |-
             ```md
             [EDIT] User
             ===========
@@ -162,7 +163,7 @@ discord:
 
             < ACTOR          = User #{after[id]} ({after[name]})```
 
-    USER_TOKEN_RESET: |-
+        USER_TOKEN_RESET: |-
             ```md
             [RESET] Token
             =============
@@ -170,7 +171,7 @@ discord:
             < USER   = User #{user[id]} ({user[name]})
             < ACTOR  = User #{user[id]} ({user[name]})```
 
-    FORCE_USER_CREATE: |-
+        FORCE_USER_CREATE: |-
             ```md
             [CREATE] User
             =============
@@ -182,7 +183,7 @@ discord:
 
             < ACTOR         = User #{actor[id]} ({actor[name]})```
 
-    FORCE_USER_EDIT: |-
+        FORCE_USER_EDIT: |-
             ```md
             [EDIT] User
             ===========
@@ -193,7 +194,7 @@ discord:
 
             < ACTOR          = User #{actor[id]} ({actor[name]})```
 
-    FORCE_USER_DELETE: |-
+        FORCE_USER_DELETE: |-
             ```md
             [DELETE] User
             =============
@@ -203,7 +204,7 @@ discord:
 
             < ACTOR  = User #{actor[id]} ({actor[name]})```
 
-    FORCE_USER_TOKEN_RESET: |-
+        FORCE_USER_TOKEN_RESET: |-
             ```md
             [RESET] Token
             =============
@@ -211,7 +212,7 @@ discord:
             < USER  = User #{user[id]} ({user[name]}) 
             < ACTOR = User #{actor[id]} ({actor[name]})```
 
-    FORCE_FILE_DELETE: |-
+        FORCE_FILE_DELETE: |-
             ```md
             [DELETE] Image
             ==============
@@ -224,7 +225,7 @@ discord:
             < ACTOR  = User #{actor[id]} ({actor[name]})```
             {file[url]}
 
-    FORCE_URL_DELETE: |-
+        FORCE_URL_DELETE: |-
             ```md
             [DELETE] URL
             ============
@@ -235,7 +236,7 @@ discord:
             < AUTHOR = User #{url[author][id]} ({url[author][name]})
             < ACTOR  = User #{actor[id]} ({actor[name]})```
 
-    ADMIN_TOGGLE_ON: |-
+        ADMIN_TOGGLE_ON: |-
             ```md
             [TOGGLE] Administrator
             ======================
@@ -245,7 +246,7 @@ discord:
             < USER    = User #{after[id]} ({after[name]})
             < ACTOR   = User #{actor[id]} ({actor[name]})```
 
-    ADMIN_TOGGLE_OFF: |-
+        ADMIN_TOGGLE_OFF: |-
             ```md
             [TOGGLE] Administrator
             ======================
@@ -257,8 +258,8 @@ discord:
 
     # you may list as many as you like    
     webhooks:
-        - id: 123456789
-          token: ABCDEFGHIJ12345
+        - id: 123456789098765432
+          token: token
           username: Imago CDN
 
           events:
